Fix layout when page width changes
Previously, the responsive layout was causing the left navigation area
to overlap the main content for wider page sizes.

Make code fit better on narrow screens.

Move summary before code examples. This keeps the summary above the
examples when the page gets narrow

--- a/documentation/website/source/_themes/opendylan/static/opendylan.org/css/opendylan.css
+++ b/documentation/website/source/_themes/opendylan/static/opendylan.org/css/opendylan.css
@@ -63,6 +63,10 @@ blockquote div p {
   body {
     padding-top: 30px;
   }
+  /* Make code font smaller */
+  #code-carousel pre {
+      font-size: smaller;
+  }
 }
 
 @media (max-width: 768px) {
